css/custom.css
/* your styles go here */

@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,600');

body{
    font-family: 'Montserrat', Arial, Helvetica, sans-serif;
}

#intro .item .logo {
    margin-bottom: 70px;
}

#intro .item h1, #intro .item h2 {
  color: black;
}

/* @media (max-width: 1199px) {
  #intro .item h2 {
    font-size: 25px;
  }
} */


/* SKILLS */

.skillsContainer {
  display: grid;
  grid-template-columns: auto auto auto auto auto auto;
  grid-row-gap: 4vh;
  grid-column-gap: 3vh;
}

.skillsContainer svg {
  height: 8vh;
  width: 8vw;
}

.skillsContainer div {
    min-width: 10vw;
}

.skillsContainer div div {
  min-height: 7vh;
}

/* APPLICATIONS -Taken from portfolio 2 for the Applications part of portfolio main.css*/
figure {
    background: #fff;
    margin-bottom: 45px;
    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.04), 0 2px 10px 0 rgba(0, 0, 0, 0.06);
  }
  figure .img-wrapper {
    position: relative;
    overflow: hidden;
  }
  figure img {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
    -webkit-transition: -webkit-transform 400ms;
    transition: transform 400ms;
  }
  figure:hover img {
    -webkit-transform: scale3d(1.2, 1.2, 1);
    transform: scale3d(1.2, 1.2, 1);
  }
figure:hover .overlay {
    opacity: 1;
  }
  figure:hover .overlay .buttons a {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  figure .overlay {
    position: absolute;
    top: 0;
    left: 0;
    right: 0;
    bottom: 0;
    padding: 10px;
    text-align: center;
    background: rgba(0, 0, 0, 0.7);
    opacity: 0;
    -webkit-transition: opacity 400ms;
    transition: opacity 400ms;
  }
  figure .overlay a {
    display: inline-block;
    color: #fff;
    padding: 10px 23px;
    line-height: 1;
    border: 1px solid #fff;
    border-radius: 0px;
    margin: 4px;
    -webkit-transform: scale3d(0, 0, 0);
    transform: scale3d(0, 0, 0);
    -webkit-transition: all 400ms;
    transition: all 400ms;
  }
  figure .overlay a:hover {
    text-decoration: none;
  }
  figure .overlay:hover a {
    -webkit-transform: scale3d(1, 1, 1);
    transform: scale3d(1, 1, 1);
  }
  figure .buttons {
    position: absolute;
    left: 0;
    right: 0;
    margin: auto;
    bottom: 0;
  }
  figure figcaption {
    padding: 20px 25px;
    margin-top: 0;
    color: #666;
  }
  figure figcaption h4 {
    margin: 0;
  }
  figure figcaption h4 a {
    color: #02bdd5;
  }
  figure figcaption p {
    font-size: 14px;
    margin-bottom: 0;
    margin-top: 5px;
  }

  .img-responsive {
      max-width: 60%;
      width: auto;
      margin: 0 auto;
  }

  figure .img-responsive {
    max-height: 150px;
  }

  /* FOOTER */
  #footer {
    background-color: #555555;
  }

  #footer p.social a.linkedin {
    background-color: #0077b5;
  }

  #footer p.social a.github {
    background-color: #333;
  }

  /* IMAGE SHAKE */

  .socialMedia :hover {
    animation: shake 2s;
    animation-iteration-count: infinite;
  }
  
  /* @keyframes shake { */
    /* 0% { transform: translate(1px, 1px) rotate(0deg); } */
    /* 10% { transform: translate(-1px, -2px) rotate(-1deg); } */
    /* 20% { transform: translate(-3px, 0px) rotate(1deg); }
    30% { transform: translate(3px, 2px) rotate(0deg); }
    40% { transform: translate(1px, -1px) rotate(1deg); }
    50% { transform: translate(-1px, 2px) rotate(-1deg); }
    60% { transform: translate(-3px, 1px) rotate(0deg); }
    70% { transform: translate(3px, 1px) rotate(-1deg); }
    80% { transform: translate(-1px, -1px) rotate(1deg); }
    90% { transform: translate(1px, 2px) rotate(0deg); }
    100% { transform: translate(1px, -2px) rotate(-1deg); }
  } */


  @keyframes shake {
    10%, 90% {
      transform: translate3d(-1px, 0, 0);
    }
    
    20%, 80% {
      transform: translate3d(2px, 0, 0);
    }
  
    30%, 50%, 70% {
      transform: translate3d(-4px, 0, 0);
    }
  
    40%, 60% {
      transform: translate3d(4px, 0, 0);
    }
  }

